# toolkit

./: CMakeLists.txt  README.md  build.sh  main.cpp  main_clean.cpp  network_config.example
include/audio/: AudioClock.h  AudioManager.h
include/core/: FFmpegResourceManager.h  Frame.h  NetworkConfig.h  VideoPlayer.h
include/network/: SyncManager.h  SyncProtocol.h  UDPSyncSender.h  UDPSyncServer.h
include/utils/: CircularBuffer.h
include/video/: VideoManager.h
src/: main.cpp
src/audio/: AudioClock.cpp  AudioManager.cpp
src/core/: FFmpegResourceManager.cpp  NetworkConfig.cpp  VideoPlayer.cpp
src/network/: SyncManager.cpp  SyncProtocol.cpp  UDPSyncSender.cpp  UDPSyncServer.cpp
src/utils/: CircularBuffer.cpp
src/video/: VideoManager.cpp
